
{{$NEXT}}

0.20130524 2013-05-23 America/Los_Angeles

 - added bin/dmarc_httpd
 - added bin/dmarc_view_reports
 - renamed: dmarc_report -> dmarc_send_reports

0.20130521 2013-05-21 America/Los_Angeles

 - check for report_record existence before insertion
 - SQL: added report_record.count column
 - subclassed aggregreate reports into Report::Aggregate
   - consolidates two agg. rep. generation methods to one
 - SQL: added table report_error
 - updated SQLite schema with native column types

0.20130520 2013-05-19 America/Los_Angeles

 - added bin/dmarc_receive (via IMAP, mbox, or message file)
 - added report retrieval via IMAP
 - extract sender domain from subject or MIME metadata
 - SQL: added author.extra_contact
 - SQL: removed 'NOT NULL' requirements for values often missing from incoming
        reports.

0.20130517 2013-05-17 America/Los_Angeles

 - send reports with zip until 7/1, gzip after
 - replace Socket 2 with Socket6 (better Windows compatibility)
 - added parsing of incoming email reports
 - added author and domain tables
 - added three related columns from/rcpt/author ids to report table
 - add email hostname to MX list when attempting SMTP delivery
 - during report delivery, check report URI max size

0.20130515 2013-05-15 America/Los_Angeles

 - use File::ShareDir to access share/*
 - added external reporting verification

0.20130514 2013-05-14 America/Los_Angeles

 - moved DNS settings into config file
 - fixed a case where disposition was not set
 - added bin/dmarc_report
   - sends email reports with Email::MIME & Net::SMTPS
 - deletes reports after successful delivery
 - required Socket 2 (correct IPv6 handling)
 - several SQL schema changes
 - has_valid_reporting_uri does validation now

0.20130510 2013-05-09 America/Los_Angeles

0.20130507 2013-05-07 America/Los_Angeles

 - added sql and MySQL schema
 - added bin/dmarc_lookup
 - replaced Regexp::Common IP validation with Net::IP (perl 5.8 compat)
 - added Results.pm tests