@@ -1,6 +1,8 @@
 
 {{$NEXT}}
 
+ - dmarc_view_reports, added filtering ability
+
 0.20130524 2013-05-23 America/Los_Angeles
 
  - added bin/dmarc_httpd
